# Vanish-private-messenger-vpoleshko

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  private_messenger_tz.txt  pyproject.toml
alembic/: env.py
app/: main.py
app/api/: deps.py
app/api/v1/: rooms.py  router.py
app/core/: config.py  security.py
app/db/: session.py  unit_of_work.py
app/entities/: invite.py  room.py
app/mappers/: room_mapper.py
app/models/: __init__.py  enums.py  key_exchange_metadata.py  room.py  room_invite.py  room_security_settings.py
app/repositories/: invite_repository.py  room_repository.py
app/schemas/: room.py
app/services/: room_service.py
app/static/: index.html
app/static/assets/: audio-AMLNZBbK.js  audio-BCRrVLNA.js  audio-BPu9eWsC.js  audio-BrQkes46.js  audio-Di4KatlM.js  index-Bf6TV6av.js  index-BhHuBkdi.js  index-BqDP17tk.css  index-BtMn4EuJ.js  index-BvT5qR_h.js  index-CjII4XV4.css  index-Cu9CV5RX.css  index-DFXpIbHL.js  index-DJDZ5SnA.css  index-DZ_LHpUy.css  index-DgVPdxR-.js  index-Di4Izd_l.js  index-DpKkiadJ.js  index-DvQ8w999.js  index-DzzfAJEO.js  index-HPDHeLY-.js  index-_SGOuM7I.css
app/ws/: handler.py  schemas.py  state.py
docker/: Dockerfile  entrypoint.sh
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  anonymizer.js  api.js  audio.js  closeTab.js  crypto.js  styles.css  useVanish.js
frontend/src/screens/: Chat.jsx  Connecting.jsx  (+5 more)
scripts/: build-frontend.sh  down.sh  lint.sh  lock.sh  logs.sh  makemigration.sh  migrate.sh  reset.sh  shell.sh  up.sh
