[tool.poetry]
name = "vanish"
version = "0.1.0"
description = "Onion-only E2EE private messenger"
authors = ["Arsenij"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
sqlalchemy = { extras = ["asyncio"], version = "^2.0.0" }
aiomysql = "^0.2.0"
alembic = "^1.14.0"
pydantic-settings = "^2.6.0"
redis = { extras = ["asyncio"], version = "^5.2.0" }
cryptography = "^43.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.0"
ruff = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
